# html-copy

./: .gitignore  README.md  pyproject.toml
examples/: basic.py
slack_copy/: abstract_markdown.py  main.py  mwe_hang_bug.py  nodes.py  scratch.py  scratch2.py  scratch3.py
slack_copy/examples/: airtable_html.html  basic.py  example.html
slack_copy/html_parsers/: __init__.py  airtable_parser.py  html_parser.py  slack_parser.py
