[tool.poetry]
name = "slack-copy"
version = "0.1.0"
description = ""
authors = ["Ian McKenzie <ianmck98@gmail.com>"]
readme = "README.md"
packages = [{include = "slack_copy"}]

[tool.poetry.dependencies]
python = "^3.11"
pyperclip = "^1.8.2"
pynput = "^1.7.6"
pygobject = "^3.46.0"
pyqt5 = "^5.15.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
